# rag-langchain-demo

./: .gitignore  LICENSE.md  README.md  app.py  chat.py  create_embeddings.py  example.env  pyproject.toml  streamlit-pinecone-rag.ipynb
