[tool.poetry]
name = "langchain-streamlit-pinecone"
version = "0.1.0"
description = ""
authors = ["Logesh R <logesh45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
streamlit = "^1.23.1"
pinecone-client = "^5.0.1"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
